--- a/card-display.html
+++ b/card-display.html
@@ -10,7 +10,7 @@
   <template>
     <template is="dom-repeat" items="{{cards}}" as="card">
       <div style="display:inline-block;">
-        <template is="dom-if" if="{{isCard(card,'desk')}}">
+        <template is="dom-if" if="{{isCard(card,'deck')}}">
           <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
             <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
             <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
