--- a/card-display.html
+++ b/card-display.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../paper-material/paper-material.html">
 <link rel="import" href="../card-deck/card-deck.html">
+<link rel="import" href="../update-data/update-data.html">
+<link rel="import" href="../sortable-list/sortable-list.html">
 <link rel="import" href="../polymer/polymer.html">
 <!--
 `<card-display cards="{{cards}}"></card-display>` displays card
