--- a/card-display.html
+++ b/card-display.html
@@ -44,9 +44,9 @@
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
               <paper-material elevation="4" style="margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
-                <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
-                <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
+                <div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+                <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+                <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
               </paper-material>
             </template>
           </div>
