--- a/card-display.html
+++ b/card-display.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../card-deck/card-deck.html">
 <link rel="import" href="../update-data/update-data.html">
 <link rel="import" href="../sortable-list/sortable-list.html">
+<link rel="import" href="../iron-selector/iron-selector.html">
 <link rel="import" href="../polymer/polymer.html">
 <!--
 `<card-display cards="{{cards}}"></card-display>` displays card
