--- a/card-display.html
+++ b/card-display.html
@@ -28,6 +28,7 @@
                 <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
               </paper-material>
             </template>
+            <paper-fab mini icon="done"></paper-fab>
           </div>
         </template>
       </sortable-list>
