--- a/card-display.html
+++ b/card-display.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../sortable-list/sortable-list.html">
 <link rel="import" href="../iron-selector/iron-selector.html">
 <link rel="import" href="../paper-fab/paper-fab.html">
+<link rel="import" href="../icon-icons/iron-icons.html">
 <link rel="import" href="../polymer/polymer.html">
 <!--
 `<card-display cards="{{cards}}"></card-display>` displays card
