--- a/card-display.html
+++ b/card-display.html
@@ -14,11 +14,16 @@
 <dom-module id="card-display">
   <template>
     <style>
+      paper-fab {
+        position: absolute;
+        background: gray;
+      }
+    
       .iron-selected paper-fab {
         background: red;
       }
     </style>
-    position: absolute;
+    
     <template is="dom-if" if="{{veiwable}}">
       <template is="dom-repeat" items="{{cards}}" as="card">
         <div style="display:inline-block;">
