--- a/card-display.html
+++ b/card-display.html
@@ -132,7 +132,7 @@
         return card.url.split(":")[0] === "deck"
       }
     },
-    picked: function(e){
+    picked: function(){
       this.fire("picked",this.selected)
     }
   })
