--- a/card-display.html
+++ b/card-display.html
@@ -87,26 +87,24 @@
       </iron-selector>
     </template>
     <template is="dom-if" if="{{pickable}}">
-      <iron-selector select="{{select}}">
-        <template is="dom-repeat" items="{{cards}}" as="card">
-          <div style="display:inline-block;" on-tap="picked">
-            <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
-                <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
-                <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
-              </card-deck>
-            </template>
-            <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
-                <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
-                <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
-              </paper-material>
-            </template>
-            <paper-fab mini icon="touch-app"></paper-fab>
-          </div>
-        </template>
-      </iron-selector>
+      <template is="dom-repeat" items="{{cards}}" as="card">
+        <div style="display:inline-block;" on-tap="picked" data-index="{{index}}">
+          <template is="dom-if" if="{{isCard(card,'deck')}}">
+            <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
+              <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+              <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+            </card-deck>
+          </template>
+          <template is="dom-if" if="{{isCard(card,'card')}}">
+            <paper-material elevation="4" style="margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+              <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+              <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
+            </paper-material>
+          </template>
+          <paper-fab mini icon="touch-app"></paper-fab>
+        </div>
+      </template>
     </template>
   </template>
 </dom-module>
@@ -132,7 +130,7 @@
         return card.url.split(":")[0] === "deck"
       }
     },
-    picked: function(){
+    picked: function(e){
       this.fire("picked",this.select)
     }
   })
