--- a/card-display.html
+++ b/card-display.html
@@ -25,7 +25,7 @@
     
     <template is="dom-if" if="{{veiwable}}">
       <template is="dom-repeat" items="{{cards}}" as="card">
-        <div style="float:left;">
+        <div style="float:left">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
               <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
@@ -45,7 +45,7 @@
     <template is="dom-if" if="{{sortable}}">
       <sortable-list sort-me="{{cards}}" output="{{sortMe}}">
         <template is="dom-repeat" items="{{sortMe}}" as="card">
-          <div style="display:inline-block;">
+          <div style="float:left">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
                 <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
@@ -67,7 +67,7 @@
     <template is="dom-if" if="{{selectable}}">
       <iron-selector multi selected-values="{{selected}}">
         <template is="dom-repeat" items="{{cards}}" as="card">
-          <div style="display:inline-block;">
+          <div style="float:left">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
                 <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
@@ -88,7 +88,7 @@
     </template>
     <template is="dom-if" if="{{pickable}}">
       <template is="dom-repeat" items="{{cards}}" as="card">
-        <div style="display:inline-block;" on-tap="picked" data-index="{{index}}">
+        <div style="float:left" on-tap="picked" data-index="{{index}}">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
               <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
