--- a/card-display.html
+++ b/card-display.html
@@ -132,11 +132,11 @@
     },
     picked: function(e){
       var selected
-      if (e.target.parentElement.parentElement.hasOwnProperty(dataIndex)) {
+      if (e.target.parentElement.parentElement.hasOwnProperty("dataIndex")) {
         selected = e.target.parentElement.parentElement.dataIndex
-      } else if (e.target.parentElement.hasOwnProperty(dataIndex)) {
+      } else if (e.target.parentElement.hasOwnProperty("dataIndex")) {
         selected = e.target.parentElement.dataIndex
-      } else if (e.target.hasOwnProperty(dataIndex)) {
+      } else if (e.target.hasOwnProperty("dataIndex")) {
         selected = e.target.dataIndex
       } 
       this.fire("picked", selected)
