--- a/card-display.html
+++ b/card-display.html
@@ -27,7 +27,7 @@
       <template is="dom-repeat" items="{{cards}}" as="card">
         <div style="float:left">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
-            <div style="margin: 5px -5px">
+            <div style="margin: 5px 0">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
                 <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
@@ -49,7 +49,7 @@
         <template is="dom-repeat" items="{{sortMe}}" as="card">
           <div style="float:left">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div style="margin: 5px -5px">
+            <div style="margin: 5px 0">
                 <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
                   <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
@@ -73,7 +73,7 @@
         <template is="dom-repeat" items="{{cards}}" as="card">
           <div style="float:left">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div style="margin: 5px -5px">
+            <div style="margin: 5px 0">
                 <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
                   <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
@@ -96,7 +96,7 @@
       <template is="dom-repeat" items="{{cards}}" as="card">
         <div style="float:left" on-tap="picked" data-index="{{index}}">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
-            <div style="margin: 5px -5px">
+            <div style="margin: 5px 0">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
                 <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
