--- a/card-display.html
+++ b/card-display.html
@@ -29,7 +29,9 @@
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
-                <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+                <div style="width:200px;height:147px">
+                  <svg viewBox="0 0 147 147" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
+                </div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
               </card-deck>
             </div>
@@ -51,7 +53,9 @@
             <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0">
                 <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
-                  <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+                  <div style="width:200px;height:147px">
+                    <svg viewBox="0 0 147 147" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
+                  </div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
                 </card-deck>
               </div>
@@ -100,7 +104,9 @@
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
-                <div style="background-size:cover;background-position:center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+                <div style="width:200px;height:147px">
+                  <svg viewBox="0 0 147 147" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
+                </div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
               </card-deck>
             </div>
