--- a/card-display.html
+++ b/card-display.html
@@ -153,6 +153,18 @@
       }
     },
     openDeck: function(e){
+      function objectToArray(data) {
+        var output = []
+        if (data) {
+          var keys = Object.keys(data)
+          for (var i = 0; i < keys.length; i++) {
+            if (typeof data[keys[i]] === 'object') {
+              output.push(data[keys[i]])
+            }
+          }
+        }
+        return output
+      }
       var selected
       if (e.target.parentElement.parentElement.hasOwnProperty("dataIndex")) {
         selected = e.target.parentElement.parentElement.dataIndex
@@ -162,7 +174,7 @@
         selected = e.target.dataIndex
       } 
       // get data
-      this.deck = this.cards[selected].data 
+      this.deck = objectToArray(this.cards[selected].data) 
       this.$.dialDeck.open()
 
     },
