--- a/card-display.html
+++ b/card-display.html
@@ -26,7 +26,7 @@
     
     <template is="dom-if" if="{{veiwable}}">
       <template is="dom-repeat" items="{{cards}}" as="card">
-        <div style="float:left">
+        <div style="max-width: 48%;float:left">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0" on-tap="openDeck"  data-index="{{index}}">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
@@ -38,8 +38,8 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-              <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
+            <paper-material elevation="4" style="max-width:100%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
               <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
               <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
             </paper-material>
@@ -50,10 +50,10 @@
     <template is="dom-if" if="{{sortable}}">
       <sortable-list sort-me="{{cards}}" output="{{sortMe}}">
         <template is="dom-repeat" items="{{sortMe}}" as="card">
-          <div style="float:left">
+          <div style="max-width:100%;float:left">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
-            <div style="margin: 5px 0">
-                <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
+              <div style="margin: 5px 0">
+                <card-deck elevation="4" width="200" height="250" style="max-width:100%;width:200px;height:250px;margin:12px 7px">
                   <div style="width:200px;height:147px">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
                   </div><br />
@@ -62,7 +62,7 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <paper-material elevation="4" style="max-width:100%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
                 <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
                 <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
                 <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
@@ -76,10 +76,10 @@
     <template is="dom-if" if="{{selectable}}">
       <iron-selector multi selected-values="{{selected}}">
         <template is="dom-repeat" items="{{cards}}" as="card">
-          <div style="float:left">
+          <div style="max-width:100%;float:left">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0">
-                <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
+                <card-deck elevation="4" width="200" height="250" style="max-width:100%;width:200px;height:250px;margin:12px 7px">
                   <div style="width:200px;height:147px">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
                   </div><br />
@@ -88,8 +88,8 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+              <paper-material elevation="4" style="max-width:100%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+                <div style="max-width:100%;background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
                 <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
               </paper-material>
@@ -101,11 +101,11 @@
     </template>
     <template is="dom-if" if="{{pickable}}">
       <template is="dom-repeat" items="{{cards}}" as="card">
-        <div style="float:left" on-tap="picked" data-index="{{index}}">
+        <div style="max-width:100%;float:left" on-tap="picked" data-index="{{index}}">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0">
-              <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
-                <div style="width:200px;height:147px">
+              <card-deck elevation="4" width="200" height="250" style="max-width:100%;width:200px;height:250px;margin:12px 7px">
+                <div style="max-width:100%;width:200px;height:147px">
                   <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
                 </div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
@@ -113,8 +113,8 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-              <div style="background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+            <paper-material elevation="4" style="max-width:100%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <div style="max-width:100%;background-size:cover;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
               <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
               <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
             </paper-material>
@@ -174,7 +174,7 @@
         selected = e.target.dataIndex
       } 
       // get data
-      this.deck = objectToArray(this.cards[selected].data) 
+      this.set("deck", objectToArray(this.cards[selected].data))
       this.$.dialDeck.open()
 
     },
