--- a/card-display.html
+++ b/card-display.html
@@ -26,7 +26,7 @@
     
     <template is="dom-if" if="{{veiwable}}">
       <template is="dom-repeat" items="{{cards}}" as="card">
-        <div style="max-width: 48%;float:left">
+        <div style="max-width:48%;float:left;heigth:250px">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0" on-tap="openDeck"  data-index="{{index}}">
               <card-deck elevation="4" width="200" height="250" style="width:200px;height:250px;margin:12px 7px">
