--- a/card-display.html
+++ b/card-display.html
@@ -30,8 +30,8 @@
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0" on-tap="openDeck"  data-index="{{index}}">
               <card-deck elevation="4" width="200" height="250" style="max-width:95%;width:200px;height:240px;margin:12px 7px">
-                <div style="width:200px;height:147px" data-index="{{index}}">
-                  <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" style="pointer-events: none; display: block; width: 100%; height: 100%"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
+                <div style="max-width:70%;width: 147px; height: 147px; padding: 0 15%" data-index="{{index}}">
+                  <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
                 </div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
               </card-deck>
@@ -54,7 +54,7 @@
             <template is="dom-if" if="{{isCard(card,'deck')}}">
               <div style="margin: 5px 0">
                 <card-deck elevation="4" width="200" height="250" style="max-width:95%;width:200px;height:240px;margin:12px 7px">
-                  <div style="width:200px;height:147px">
+                  <div style="max-width:70%;width: 147px; height: 147px; padding: 0 15%" data-index="{{index}}">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
                   </div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
@@ -80,7 +80,7 @@
             <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0">
                 <card-deck elevation="4" width="200" height="250" style="max-width:95%;width:200px;height:240px;margin:12px 7px">
-                  <div style="width:200px;height:147px">
+                  <div style="max-width:70%;width: 147px; height: 147px; padding: 0 15%" data-index="{{index}}">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
                   </div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
@@ -105,7 +105,7 @@
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0">
               <card-deck elevation="4" width="200" height="250" style="max-width:95%;width:200px;height:250px;margin:12px 7px">
-                <div style="max-width:100%;width:200px;height:147px">
+                <div style="max-width:70%;width: 147px; height: 147px; padding: 0 15%" data-index="{{index}}">
                   <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" class="style-scope iron-icon"></path></g></svg>
                 </div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
