--- a/card-display.html
+++ b/card-display.html
@@ -27,7 +27,7 @@
     
     <template is="dom-if" if="{{veiwable}}" restamp>
       <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-        <div style="max-width:45%;float:left;heigth:250px" on-tap="tapped">
+        <div style="max-width:45%;float:left;heigth:250px" on-tap="tapped" data-index="{{index}}">
           <template is="dom-if" if="{{isCard(card,'deck')}}">
             <div style="margin: 5px 0" on-tap="openDeck" data-index="{{index}}">
               <card-deck title="{{card.title}}" style="max-width:95%;width:200px;height:240px;margin:12px 7px"></card-deck>
