--- a/card-display.html
+++ b/card-display.html
@@ -150,7 +150,7 @@
     },
     isCard: function(card, isA){
       if (isA === "survey") {
-        return (card.url.split(":")[0] === "survey"
+        return (card.url.split(":")[0] === "survey")
       }
       if (isA === "card") {
         return (card.url.split(":")[0] === "https" || card.url.split(":")[0] === "http" || card.url.split(":")[0] === "user")
